--- a/conFusion/Bootstrap4/conFusion/css/styles.css
+++ b/conFusion/Bootstrap4/conFusion/css/styles.css
@@ -35,3 +35,16 @@ body{
 .navbar-dark {
      background-color: #512DA8;
 }
+html,body
+{
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
